# memory-benchmark-harness

./: .cs-session-state.json  .dockerignore  .gitignore  .pre-commit-config.yaml  .prompt-log.json  .secrets.baseline  CLAUDE.md  Makefile  README.md  coverage.xml  main.py  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
docker/: Dockerfile.cpu  Dockerfile.gpu  docker-compose.yml  entrypoint.sh
docs/: GIT_NOTES_API.md  GPU_RUNNER_SETUP.md
docs/experiments/: README.md
docs/experiments/ablations/: README.md
docs/experiments/contextbench/: README.md
docs/experiments/locomo/: README.md
docs/experiments/longmemeval/: README.md
docs/experiments/memoryagentbench/: README.md
docs/publication/: REPRODUCIBILITY.md  blog_post.md  paper.tex
scripts/: minimal_validation.py  quick_ablation_test.py  quick_contextbench_test.py  quick_locomo_test.py  quick_longmemeval_test.py  quick_memoryagentbench_test.py  quick_terminalbench_test.py  run_all_benchmarks.py  test_agentic_memory.py  validate_git_notes.py  validate_memory_benefit.py  validate_subcog.py
src/: __init__.py
src/adapters/: __init__.py  ablation.py  base.py  git_notes.py  mock.py  no_memory.py  subcog.py
src/benchmarks/: __init__.py
src/cli/: __init__.py  main.py
src/clients/: __init__.py  mock_client.py  openai_client.py
src/evaluation/: __init__.py  judge.py  mock_judge.py  statistics.py
src/experiments/: __init__.py  runner.py
src/publication/: __init__.py  figures.py  statistics.py  tables.py
src/reporting/: __init__.py  results_reporter.py  validation_samples.py
src/validation/: __init__.py  analysis.py  annotation.py  collector.py  compiler.py
tests/: __init__.py  conftest.py
tests/adapters/: __init__.py  test_ablation.py
tests/benchmarks/: __init__.py
tests/cli/: test_e2e_run.py  test_main.py
tests/experiments/: __init__.py  test_runner.py
tests/fixtures/: __init__.py
tests/integration/: test_adapters_git_notes.py
tests/publication/: __init__.py  test_figures.py  test_statistics.py  test_tables.py
tests/reporting/: __init__.py  test_results_reporter.py  test_validation_samples.py
tests/unit/: test_adapters_base.py  test_adapters_mock.py  test_adapters_no_memory.py  test_judge.py  test_statistics.py
tests/validation/: __init__.py  test_analysis.py  test_annotation.py  test_collector.py  test_compiler.py
(+62 files in other folders)
